fixed demo page text on mobile

--- a/style.css
+++ b/style.css
@@ -179,7 +179,7 @@ iframe {
   }
   p {
     order: 6;
-    margin-top: 3vw;
+    margin-top: 40vw;
     font-size: 4vw;
     width: 100vw;
   }
